--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "qat",
   "displayName": "Qat Programming Language",
   "publisher": "aldrinsartfactory",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/qatlang/qat-vscode.git"
+  },
+  "homepage": "https://github.com/qatlang/qat-vscode#readme",
   "author": {
     "name": "Aldrin Mathew",
     "email": "admin@aldrinmathew.com",
