--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qat",
-  "version": "0.2.4",
+  "version": "0.3.0",
   "displayName": "Qat Programming Language",
   "publisher": "aldrinsartfactory",
   "repository": {
@@ -15,10 +15,23 @@
   },
   "description": "Official analysis, highlighting, formatting and syntax support for the Qat programming language...",
   "dependencies": {
-    "@vscode/test-electron": "^2.1.3"
+    "@vscode/test-electron": "^2.1.3",
+    "strip-ansi": "^7.0.1",
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.8.2",
+    "which": "^2.0.2"
   },
   "devDependencies": {
-    "@types/vscode": "^1.66.0"
+    "@types/node": "18.7.13",
+    "@types/vscode": "^1.66.0",
+    "@types/which": "^2.0.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
+  },
+  "main": "out/dist/extension",
+  "scripts": {
+    "build": "webpack --mode development",
+    "release": "webpack --mode production"
   },
   "engines": {
     "vscode": "^1.66.0"
@@ -48,6 +61,9 @@
         "path": "./syntaxes/qat.tmLanguage.json"
       }
     ]
-  }
+  },
+  "activationEvents": [
+    "onLanguage:qat"
+  ]
 }
 
